--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Tab Manager</title>
+    <link rel="stylesheet" href="popup.css" />
+  </head>
+  <body>
+    <h1>Tab Manager</h1>
+
+    <button id="loadTabsBtn">Load Tabs</button>
+
+    <ul id="tabsList"></ul>
+
+    <script src="./popup.js"></script>
+  </body>
 </html>
