load tabs functionality completed

--- a/popup.html
+++ b/popup.html
@@ -7,11 +7,8 @@
   </head>
   <body>
     <h1>Tab Manager</h1>
-
     <button id="loadTabsBtn">Load Tabs</button>
-
-    <ul id="tabsList"></ul>
-
+    <div id="tabsContainer"></div>
     <script src="./popup.js"></script>
   </body>
 </html>
