close duplicate tabs

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Tab Manager</h1>
     <button id="loadTabsBtn">Load Tabs</button>
+    <button id="closeDuplicatesBtn">Close Duplicate Tabs</button>
+    <button id="groupTabsBtn">Group Tabs by Domain</button>
     <div id="tabsContainer"></div>
     <script src="./popup.js"></script>
   </body>
