--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
     <button id="loadTabsBtn">Load Tabs</button>
     <button id="closeDuplicatesBtn">Close Duplicate Tabs</button>
     <button id="groupTabsBtn">Group Tabs by Domain</button>
+    <button id="ungroupTabsBtn">Ungroup All Tabs</button>
     <div id="tabsContainer"></div>
     <script src="./popup.js"></script>
   </body>
