--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Tab Manager</h1>
     <button id="loadTabsBtn">Load Tabs</button>
+    <p id="tabCount"></p>
     <button id="closeDuplicatesBtn">Close Duplicate Tabs</button>
     <button id="groupTabsBtn">Group Tabs by Domain</button>
     <button id="ungroupTabsBtn">Ungroup All Tabs</button>
